src/components/clusters/common/Upgrades/UpdateGraph/UpdateGraph.scss
.ocm-upgrade-graph {
  border-width: 1px;
  max-width: 800px;
  @media (max-width: 400px) {
    display: none;
    flex-wrap: wrap;
  }
}

.ocm-upgrade-graph-container {
  align-items: center;
  display: flex;
  font-size: var(--pf-t--global--font--size--sm);
}

.ocm-upgrade-graph-path {
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  width: 100%;
  margin-top: 20px;
}

.ocm-upgrade-graph-line {
  align-items: center;
  display: flex;
  height: 60px;
  justify-content: center;
  position: relative;
  min-width: 50px;
  width: 100%;

  &::before {
    background-color: #06c;
    content: '';
    height: 4px;
    position: absolute;
    width: 100%;
  }

  &:last-child::after {
    background: transparent;
    border: 8px solid transparent;
    border-left-color: var(--pf-t--global--border--color--default);
    border-width: 8px 12px;
    content: '';
    position: absolute;
    right: -15px;
    border-left-color: var(--pf-t--global--color--brand--default);
  }
}

.ocm-upgrade-graph-version {
  color: initial;
  display: flex;
  flex-direction: column;
  height: 35px;
  justify-content: flex-end;
  line-height: 1;
  position: absolute;
  text-align: center;
  top: -20px;
  font-weight: var(--pf-t--global--font--weight--heading--bold);
}

.ocm-upgrade-graph-version-dot {
  background: var(--pf-t--global--color--brand--default);
  border-radius: 16px;
  content: '';
  height: 16px;
  position: absolute;
  width: 16px;
  z-index: 2;

  &.ocm-upgrade-current::after {
    background: transparent !important;
  }

  &::after {
    background: #fff;
    border: 2px solid #fff;
    border-radius: 12px;
    content: '';
    height: 12px;
    left: 2px;
    position: absolute;
    top: 2px;
    width: 12px;
  }
}

.ocm-upgrade-additional-versions-available {
  font-size: var(--pf-t--global--font--size--sm);
  color: var(--pf-t--global--text--color--status--info--default);
  margin-top: var(--pf-t--global--spacer--xs);
  margin-bottom: var(--pf-t--global--spacer--lg);
  > svg {
    color: var(--pf-t--global--icon--color--status--info--default);
    margin-right: var(--pf-t--global--spacer--xs);
  }
}

